Fixing a few of the mistakes ive made today #114

--- a/django_project/templates/treasure/contribution.html
+++ b/django_project/templates/treasure/contribution.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-    Contribution Summary for {{user_teacher.firstname}} {{user_teacher.surname}} 
+    Contribution Summary for {{user_teacher.firstname}} {{user_teacher.surname}}
 {% endblock %}
 
 {% block body_block %}
@@ -29,7 +29,7 @@
                 <tbody>
                     {% for entry in uploaded %}
                         <tr>
-                            <td> -  <a href="/resource/{{entry.resource.id }}">{{entry.resource.name}}</a></td>
+                            <td> -  <a href="/resource/{{ entry.id }}">{{ entry.name }}</a></td>
 <!--                            <td>{% if entry.used %} Yes{% else %} No. (<a href="/resource/{{entry.resource.id }}/use/hist"> Yes?</a>){% endif %}</td>
                             <td>{% if entry.rated %} Yes{% else %} No. (<a href="/resource/{{entry.resource.id }}/rate/"> Rate it</a>){% endif %}</td> -->
                         </tr>
@@ -96,7 +96,7 @@
                 <tbody>
                     {% for entry in rated %}
                         <tr>
-                            <td> -  <a href="/resource/{{entry.resource.id }}">{{entry.resource.name}}</a></td>
+                            <td> -  <a href="/resource/{{ entry.resource.id }}">{{ entry.resource.name }}</a></td>
                             <td>{{entry.datetime}}</td>
 <!--                            <td>{% if entry.used %} Yes{% else %} No. (<a href="/resource/{{entry.resource.id }}/use/hist"> Yes?</a>){% endif %}</td>
                             <td>{% if entry.rated %} Yes{% else %} No. (<a href="/resource/{{entry.resource.id }}/rate/"> Rate it</a>){% endif %}</td> -->
