We now have a working forum :)
Just need to add a way to create boards when resources are
created/evolved and create posts when resources are rated.

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -62,6 +62,7 @@
 						 		<input id='search' name='search' class="search-query span2" placeholder="Quick Search" type="text">
 						   </form>                       
                            </li>
+                           <li><a href="/forum">Forum</a></li>
                            <li><a href="/explore">Explore</a></li>
                            <li><a href="/resources">Resources</a></li>
                            <li><a href="/packs">Packs</a></li>
