--- a/django_project/templates/treasure/board.html
+++ b/django_project/templates/treasure/board.html
@@ -3,13 +3,38 @@
 {% load static %}
 
 {% block title %}
-    Help
+    Board
 {% endblock %}
 
 {% block body_block %}
 
 <div class="span12 hero-unit">
-    <h2>HELP<h2>
+    
+    {% if invalid %}
+        <h4>No Board at this URL</h4>
+        <a href="/forum/">Return to the main forum</a>
+    {% else %}
+    
+        {% if resource %}
+            <h3>Discussions on: <a href="/resource/{{ resource.id }}">{{ resource.name }}</a><h3>
+        {% else %}
+            <h3>Discussions about: {{ title }}</h3>
+        {% endif %}
+        
+        {% if board %}
+        <ul>
+            {% for thread in board %}
+            <li><a href="/forum/{{ board_url }}/{{ thread.id}}/">{{ thread.title }}</a></li>
+            {% endfor %}
+        </ul>
+        {% else %}
+            <h4>No Threads on this board</h4>
+        {% endif %}
+        
+    <a class="btn" href="/forum/{{ board_url }}/new/">New Thread</a>
+    
+    {% endif %}
+    
 </div>
 
 {% endblock %}
