Adding a div for the forum posts to go into.

--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -69,7 +69,12 @@
                 <hr>
            </div>
         </div>
-       
+        
+        <div class="hero-unit">
+            <h3>Forum</h3>
+            <a href="/forum/{{resource.id}}">Link2Forum</a>
+        </div>
+        
         <div class="hero-unit">
             <h3>Packs</h3>
             {% if partofpacks %}
